improve application manage
