# openapi.yaml
@@ -3,9 +3,81 @@
 
 openapi: 3.0.3
 info:
-    title: UserServer API
+    title: ""
     version: 0.0.1
 paths:
+    /v1/applications/create:
+        post:
+            tags:
+                - ApplicationSvc
+            operationId: ApplicationSvc_CreateApplication
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/api.application.v1.CreateAppRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/api.application.v1.Application'
+    /v1/applications/list:
+        get:
+            tags:
+                - ApplicationSvc
+            operationId: ApplicationSvc_ListApplications
+            parameters:
+                - name: id
+                  in: query
+                  schema:
+                    type: integer
+                    format: int64
+                - name: code
+                  in: query
+                  schema:
+                    type: string
+                - name: name
+                  in: query
+                  schema:
+                    type: string
+                - name: appType
+                  in: query
+                  schema:
+                    type: string
+                - name: labels
+                  in: query
+                  schema:
+                    type: array
+                    items:
+                        type: string
+                - name: category
+                  in: query
+                  schema:
+                    type: string
+                - name: developmentLanguage
+                  in: query
+                  schema:
+                    type: string
+                - name: pageIndex
+                  in: query
+                  schema:
+                    type: integer
+                    format: int64
+                - name: pageSize
+                  in: query
+                  schema:
+                    type: integer
+                    format: int64
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/api.application.v1.ListAppResponse'
     /v1/user/changePassword:
         post:
             tags:
@@ -113,6 +185,70 @@ paths:
                                 $ref: '#/components/schemas/api.user.v1.EmptyReply'
 components:
     schemas:
+        api.application.v1.Application:
+            type: object
+            properties:
+                id:
+                    type: integer
+                    format: int64
+                code:
+                    type: string
+                name:
+                    type: string
+                appType:
+                    type: string
+                labels:
+                    type: array
+                    items:
+                        type: string
+                category:
+                    type: string
+                developmentInfo:
+                    type: object
+                testInfo:
+                    type: object
+                notificationInfos:
+                    type: object
+        api.application.v1.CreateAppRequest:
+            type: object
+            properties:
+                name:
+                    type: string
+                appType:
+                    type: string
+                labels:
+                    type: array
+                    items:
+                        type: string
+                category:
+                    type: string
+                developmentInfo:
+                    type: object
+                testInfo:
+                    type: object
+                notificationInfos:
+                    type: object
+        api.application.v1.ListAppResponse:
+            type: object
+            properties:
+                data:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/api.application.v1.Application'
+                pageInfo:
+                    $ref: '#/components/schemas/api.base.v1.PageInfo'
+        api.base.v1.PageInfo:
+            type: object
+            properties:
+                pageIndex:
+                    type: integer
+                    format: int64
+                pageSize:
+                    type: integer
+                    format: int64
+                total:
+                    type: integer
+                    format: int64
         api.user.v1.ChangePasswordRequest:
             type: object
             properties:
@@ -182,4 +318,5 @@ components:
                 extraInfo:
                     type: object
 tags:
+    - name: ApplicationSvc
     - name: UserServer
